Fix sidebar and contents overflow bug

--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,7 @@
 }
 body{
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 :root{
@@ -153,11 +154,11 @@ body{
 /* sidebar starts here */
 .sidebar{
     height: 100%;
-    overflow-y: scroll;
     width: 19%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-y: scroll;
 }
 .home{
     background-color: rgba(228, 228, 228, 0.555);
@@ -232,7 +233,8 @@ body{
     margin-top: 1.5rem;
     display: grid; grid-template-columns: repeat(3, 1fr);
     gap: 1rem;
-    /* overflow-y: scroll; */
+    height: 100%;
+    overflow-y: scroll;
     
 }
 
